Create update user
