# storage/api-docs/api-docs.yaml
@@ -231,3 +231,45 @@ paths:
           $ref: '#/components/responses/403'
         '404':
           $ref: '#/components/responses/404'
+    patch:
+      tags:
+        - Users
+      summary: Update User
+      parameters:
+        - $ref: '#/components/parameters/user'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                login:
+                  type: string
+                  maximum: 255
+                  example: user
+                password:
+                  type: string
+                  minimum: 8
+                  maximum: 255
+                  format: password
+                  example: password
+                superior_id:
+                  type: integer
+                  example: 1
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/user'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
